Invio codice finale del  Compito 2 Modulo 2

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<a href="#homeMainContent">Skip on Main Content</a>
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
@@ -10,15 +10,17 @@
 
 <body>
   <header>
-    <nav>
+
+    <nav class="grid">
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="neighborhood.html">Neighborhood Walks</a></li>
         <li><a href="parks.html">Walks in the Park</a></li>
       </ul>
+          <img src="images/BaconGallupPark.jpg" width="200" alt="Brown Labradoodle sitting next to a statue.">
+
     </nav>
-    <img src="images/BaconGallupPark.jpg" width="200" alt="Brown Labradoodle sitting next to a statue.">
-    <h1>Springtime in Michigan</h1>
+    <h1 id="homeMainContent">Springtime in Michigan</h1>
   </header>
   <main>
     <p>Springtime in <a href="https://www.michigan.org/city/ann-arbor">Ann Arbor</a> is a beautiful time. Even though
