--- a/neighborhood.html
+++ b/neighborhood.html
@@ -10,18 +10,20 @@
 
 <body>
   <header>
-    <nav>
+    <a href="#walksMainContent">Skip on Main Content</a>
+    <nav class="grid">
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="neighborhood.html">Neighborhood Walks</a></li>
         <li><a href="parks.html">Walks in the Park</a></li>
       </ul>
+      <img src="images/BaconGallupPark.jpg" width="200" alt="Brown Labradoodle sitting next to a statue.">
     </nav>
-    <img src="images/BaconGallupPark.jpg" width="200" alt="Brown Labradoodle sitting next to a statue.">
-    <h1>Neighborhood Walks</h1>
+  
+    <h1 id="walksMainContent">Neighborhood Walks</h1>
   </header>
   <main>
-    <div>
+    <div class="imgWalks">
       <img src="images/bend_in_the_road.jpg"
         alt="a purple tree stands in contrast to the green leaved trees along a bend in the road" width="100">
       <img src="images/pink_blossoms.jpg" alt="small pink blossoms on an otherwise green leaved tree" width="100">
