--- a/parks.html
+++ b/parks.html
@@ -10,18 +10,20 @@
 
 <body>
   <header>
-    <nav>
+    <a href="#parkMainContent">Skip on Main Content</a>
+    <nav class="grid">
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="neighborhood.html">Neighborhood Walks</a></li>
         <li><a href="parks.html">Walks in the Park</a></li>
       </ul>
+      <img src="images/BaconGallupPark.jpg" width="200" alt="Brown Labradoodle sitting next to a statue.">
     </nav>
-    <img src="images/BaconGallupPark.jpg" width="200" alt="Brown Labradoodle sitting next to a statue.">
-    <h1>Michigan Parks</h1>
+    
+    <h1 id="parkMainContent">Michigan Parks</h1>
 
   </header>
-  <main>
+  <main class="mainPark">
     <div>
       <img src="images/hanging_plants.jpg" alt="brown labradoodle sitting near a stream in a wooded setting"
         width="100">
